--- a/SISAE/FRONTEND/Login Form/Login.html
+++ b/SISAE/FRONTEND/Login Form/Login.html
@@ -10,17 +10,17 @@
 <div class="login">
     <h1>Login</h1>
     <form method="post">
-    	<input type="text" name="u" placeholder="Username" required="required" />
-        <input type="password" name="p" placeholder="Password" required="required" />
+    	<input type="text" name="u" placeholder="Usuario" required="required" />
+        <input type="password" name="p" placeholder="Contraseña" required="required" />
         <hr>
      <div class="container">
                                         
   <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccion
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccione
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li><a href="#">Profesor</a></li>
-      <li><a href="#">Académico</a></li>
+      <li><a href="#">Administrativo</a></li>
       <li><a href="#">Encargado</a></li>
     </ul>
   </div>
