--- a/SISAE/FRONTEND/Login Form/Login.html
+++ b/SISAE/FRONTEND/Login Form/Login.html
@@ -10,13 +10,14 @@
 <div class="login">
     <h1>Login</h1>
     <form method="post">
-    	<input type="text" name="u" placeholder="Usuario" required="required" />
-        <input type="password" name="p" placeholder="Contraseña" required="required" />
+        
+    	<input type="text" name="u" placeholder="Username" required="required" />
+        <input type="password" name="p" placeholder="Password" required="required" />
         <hr>
      <div class="container">
                                         
   <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccione
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Selección
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li><a href="#">Profesor</a></li>
@@ -27,7 +28,7 @@
 </div>
 
         <hr>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Ingresar</button>
     </form>
     <br>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
